--- a/index.html
+++ b/index.html
@@ -30,20 +30,20 @@
             <div class="inside-container">
                 <div class="row">
                     <div class="firstcol">
-                        <img src="images/icon-sedans.svg" alt="sedans icon">
+                        <img src="images/icon-sedans.svg" alt="sedans icon" aria-hidden="true">
                         <h1 class="header"> Sedans </h1>
                         <p class="para">Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city or on your next road trip.
                         </p>
                         <a href="#" class="btn firstbtn">Learn More</a>
                     </div>
                     <div class="middlecol">
-                        <img src="images/icon-suvs.svg" alt="suv icon">
+                        <img src="images/icon-suvs.svg" alt="suv icon" aria-hidden="true">
                         <h1 class="header">SUVs</h1>
                         <p class="para">Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation and off-road adventures.</p>
                         <a href="#" class="btn middlebtn">Learn More</a>
                     </div>
                     <div class="lastcol">
-                        <img src="images/icon-luxury.svg" alt="luxury icon">
+                        <img src="images/icon-luxury.svg" alt="luxury icon" aria-hidden="true">
                         <h1 class="header">Luxury</h1>
                         <p class="para">Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury rental and arrive in style.</p>
                         <a href="#" class="btn lastbtn">Learn More</a>
